--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -100,7 +100,7 @@ nav {
         display: block;
         width: 0.48vw;
         height: 0.48vw;
-        border-radius: 7vw;
+        border-radius: 50%;
         background-color: transparent;
         border: 1px solid white;
         opacity: 0.5;
