--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -28,7 +28,7 @@
           display: block;
           width: 12px;
           height: 12px;
-          border-radius: 9px;
+          border-radius: 50%;
           background-color: transparent;
           border: 1px solid #062033;
           opacity: 0.5;
@@ -168,7 +168,7 @@ h4.background {
     position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
     top: 50%;
     left: 0;
-    width: 45%;
+    width: 40%;
     z-index: -1;
   }
 
@@ -179,7 +179,7 @@ h4.background {
     position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
     top: 50%;
     right: 0;
-    width: 45%;
+    width: 40%;
     z-index: -1;
   }
 
@@ -194,7 +194,7 @@ h4.background {
       background: white;
     }
     #fun &{
-      background-color: rgba(6,32,51,0.9);
+      background: 0;
     }
   }
 }
