--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6102,6 +6102,8 @@ p.content {
   -o-background-size: cover;
   -ms-background-size: cover;
   background-size: cover; }
+  #fun img {
+    max-width: 50%; }
   @media only screen and (max-width: 980px) {
     #fun .responsive-margin {
       text-align: center;
