--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -378,7 +378,9 @@ p{
     padding:0;
       }
 
-
+  .bvcv:hover .envelope{
+    content: url('../../img/icon/Envelope_active.png');
+  }
   h4.location{
     font-family: "Open Sans" , serif;
     color: $color-primary
@@ -644,8 +646,8 @@ p{
   background-color: $color-feature;
   color: white;
 }
-.bvcv:hover .envelope{
-  content: url('../../img/icon/Envelope_active.png');
+.fa-heart-o{
+  font-weight: bold;
 }
 
 
