--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -4,7 +4,8 @@
 
 footer {
   background-color: #1ea78d;
-  border-top: 4px solid #062033;
+  border-top: 5px solid #062033;
+  padding-bottom: 60px;
   .container {
     padding-bottom: 30px;
   }
@@ -15,12 +16,12 @@ footer {
   h6 {
     color: white;
     &.description {
-      margin-top: 40px;
+      margin-top: 42px;
       font-family: "Open Sans", serif;
       font-weight: 300;
     }
     &.description1 {
-      margin-top: 80px;
+      margin-top: 120px;
       font-family: "Open Sans", serif;
       font-weight: 300;
       @media (max-width: 990px){
@@ -28,9 +29,12 @@ footer {
       }
     }
     &.sub{
-      margin-top: 50px;
+      margin-top: 62px;
       font-family: "Open Sans", serif;
       font-weight: 300;
+      border-left: 1px solid #177e72;
+      padding-left: 15px;
+      line-height: 24pt;
       span{
         padding-left: 5px;
         padding-right: 5px;
@@ -57,7 +61,7 @@ footer {
   }
   .form{
     padding: 0;
-    margin-top: 30px;
+    margin-top: 48px;
     position:relative;
   }
   .input{
@@ -112,6 +116,7 @@ footer {
     opacity: 0.9;
   }
   ul.explore{
+    margin-top: 30px;
     li{
       background-color: $color-footer;
       color: white;
