--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -14,8 +14,8 @@
     ul.slick-dots {
       position: relative;
       left: 51%;
-      margin-top: 5%;
-      margin-bottom: 2%;
+      margin-top: 58px;
+      margin-bottom: 38px;
       @media only screen and (max-width: 991px) {
           position: relative;
           left: 51%;
@@ -64,7 +64,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+  }
+  br {
+    display: block;
+    margin: 16px 0;
+    content:"";
   }
 }
 
@@ -118,6 +122,10 @@
   .fa-stack-1x{
     background: rgba(0,0,0,0.5);
   }
+  ul.slick-dots{
+    margin-top: 68px;
+    margin-bottom: 34px;
+  }
 }
 
 h1 {
@@ -136,6 +144,7 @@ h1 {
       font-family: "Open Sans", serif;
       text-align: left;
       font-weight: 600;
+      letter-spacing: -0.02em;
       @media (max-width: 991px) {
         text-align: center;
       }
@@ -143,8 +152,7 @@ h1 {
   &.content-name{
     color: $color-primary;
     font-size: 16pt;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding-top: 16px;
     font-weight: 600;
     font-family: "Open Sans", serif;
   }
@@ -158,7 +166,7 @@ h4.background {
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
-  opacity: 0.5;
+  opacity: 0.7;
   color: #c3c6c7;
   #fun &{
     color: white;
@@ -166,7 +174,7 @@ h4.background {
   }
 
   &:before {
-    border-top: 2px solid #dce1e5;
+    border-top: 1px solid #dce1e5;
     content:"";
     //margin: 0 auto; /* this centers the line to the full width specified */
     position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
@@ -177,7 +185,7 @@ h4.background {
   }
 
   &:after {
-    border-top: 2px solid #dce1e5;
+    border-top: 1px solid #dce1e5;
     content:"";
     //margin: 0 auto; /* this centers the line to the full width specified */
     position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
@@ -226,7 +234,15 @@ p{
       color: $color-primary;
       font-size: 11pt;
       font-family: "Open Sans", serif;
+      margin-top: 17px;
+      #team &{
+        margin-top: 8px;
+      }
     }
+    #works &, #contact &{
+      margin-top: -5px;
+      margin-bottom:5px;
+     }
   }
 }
 
@@ -355,12 +371,15 @@ p{
     margin-top: 90px;
   }
   &.heart{
-    margin-top: 10px;
+    margin-top: 12px;
+    #work &{
+      margin-top: 9px;
+    }
   }
   &.content {
-    margin-top: 60px;
+    margin-top: 52px;
     #team & {
-      margin-top: 100px;
+      margin-top: 105px;
     }
     #contact &{
       margin-top: 80px;
@@ -368,12 +387,19 @@ p{
     #works &{
       margin-top: 40px
     }
+    #contact &{
+      margin-top: 68px;
+    }
+
   }
   .container-fluid & {
+    #works &{
+      margin-top: 37px;
+    }
     margin-top: 30px;
   }
   &.footer{
-    margin-top: 100px;
+    margin-top: 97px;
   }
 }
 #contact{
@@ -391,7 +417,8 @@ p{
   }
   h3.location{
     font-family: "Open Sans" , serif;
-    color: $color-primary
+    color: $color-primary;
+    margin-bottom:32px;
   }
   h6.location {
     margin-top: 40px;
@@ -492,6 +519,8 @@ p{
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;;
+    margin: auto;
+    margin-top:-5px;
     span{
       padding-right: 15px;
       color: $color-feature;
@@ -499,7 +528,6 @@ p{
     @media only screen and (min-width: 980px) {
       float: right;
     }
-    margin: auto;
   }
 
   .form-btn:hover{
@@ -605,12 +633,12 @@ p{
   }
   .bgrfun{
     background-color: rgba(6,32,51,0.8);
-    padding-bottom: 160px;
+    padding-bottom: 155px;
   }
   .text-center{
-    color: rgba(255,255,255,0.8);
+    color: rgb(255,255,255);
     h1{
-      margin-top: 30px;
+      margin-top: 33px;
       font-family: "Open Sans";
       font-weight: 600;
       @media (min-width: 1048px ){
@@ -618,7 +646,7 @@ p{
       }
     }
     h4{
-      margin-top: 5px;
+      margin-top: 3px;
       font-family: "Open Sans";
       text-transform: uppercase;
     }
@@ -629,6 +657,9 @@ p{
 }
 .no-padding{
   padding: 0 !important;
+  #contact &{
+    padding: 0 15px 0 0 !important;
+  }
 }
 .no-paddingleft{
   @media (min-width: 980px){
