--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -18,7 +18,6 @@ nav {
   }
   a.navbar-brand{
     outline:0;
-
     color: white !important;
     font-family: 'Pacifico', serif;
     font-size: 23pt ;
@@ -28,13 +27,20 @@ nav {
   }
   }
   .brand{
-    padding-left: 10px;
     color: rgba(250,250,250,0.35) !important;
     font-family: 'Open Sans', serif;
     font-size: 11pt ;
     @media  (max-width: 768px) {
       font-size: 9pt ;
     }
+  }
+  .dash{
+    color: #17526e;
+    margin-left: 18px;
+    margin-right: 6px;
+    font-family: "Open Sans", serif;
+    font-size: 13pt;
+    text-decoration: none;
   }
 
 }
@@ -48,9 +54,11 @@ nav {
     a {
       font-family: "Open Sans", serif;
       font-size: 13px;
-      padding: 30px 2px 25px 2px;
+      padding: 30px 2px 21px 2px;
       margin:0 15px;
+      boder-top: 1px solid rgba(0,0,0,0);
       outline: 0;
+      letter-spacing: 0.05em;
       &:link {
         color: #FFFFFF;
       }
@@ -121,7 +129,7 @@ nav {
 
     h1.home-text1 {
       width: 90%;
-      @include center-test(61.8%);
+      @include center-test(61.6%);
       color: white;
       font-size:calc(38px + 1.5vw);
       font-family: "Open Sans", serif;
@@ -187,8 +195,8 @@ nav {
 
     }
     .social{
-      @include center-test(94%);
-      font-size:calc(5px + 1.5vw);
+      @include center-test(93.3%);
+      font-size:calc(5px + 0.7vw);
       font-family: "Open Sans", serif;
       font-weight: 300;
       list-style-type: none;
@@ -225,7 +233,7 @@ nav {
   @media (max-width:768px) {
     background-color: rgba(10,31,35, 1);
   }
-  background-color: rgba(10,31,35, 0.2);
+  background-color: rgba(10,31,35, 1);
   border: 0;
 }
 
